// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can load data for component 1`] = `
Object {
  "dataProps": Object {
    "data": Object {
      "dataDefinitionArgs": Object {
        "dataArg": "Foo",
      },
      "loaded": true,
      "result": 3,
    },
  },
  "layoutType": "test-with-data",
  "length": 3,
  "renderPath": "[0]test-composition/main/[0]",
}
`;

exports[`can load data for composition 1`] = `
Object {
  "dataProps": Object {
    "data": Object {
      "dataDefinitionArgs": Object {
        "dataArg": "Foo",
      },
      "loaded": true,
      "result": 3,
    },
  },
  "layoutType": "test-with-data",
  "length": 3,
  "main": <ComponentsRenderer
    additionalComponentProps={Object {}}
    componentMiddleware={[Function]}
    componentRegistrations={
      Object {
        "get": [Function],
        "isRegistered": [Function],
      }
    }
    componentRenderPath="[0]test-with-data/main"
    components={
      Array [
        Object {
          "props": Object {},
          "type": "test-component",
        },
      ]
    }
    layoutApi={
      Object {
        "component": [Function],
        "componentRegistrations": Object {
          "get": [Function],
          "isRegistered": [Function],
        },
        "composition": [Function],
        "compositionRegistrations": Object {
          "get": [Function],
        },
        "createRenderers": [Function],
        "nestedComposition": [Function],
      }
    }
    services={Object {}}
  />,
  "renderPath": "[0]test-with-data",
}
`;
